# collada-dom

./: CMakeLists.txt  README.rst  changelog.rst  collada-dom-141.pc.in  collada-dom-150.pc.in  collada-dom.pc.in  collada_dom-config-version.cmake.in  collada_dom-config.cmake.in  description
dom/: CMakeLists.txt
dom/codeGen/: cleanSchema  gen_dom_1_5  readme.txt
dom/codeGen/1.4/: gen.php
dom/codeGen/1.4/om/: base-types.php  object-model.php  xsAll.php  xsAny.php  xsAppinfo.php  xsAttribute.php  xsChoice.php  xsComplexContent.php  xsComplexType.php  xsDocumentation.php  xsElement.php  xsExtension.php  xsGroup.php  xsImport.php  xsList.php  xsMaxExclusive.php  xsMinExclusive.php  xsMinLength.php  xsPattern.php  xsRestriction.php  xsSchema.php  xsSequence.php  xsSimpleContent.php  xsSimpleType.php  xsUnion.php  xsWhiteSpace.php
dom/codeGen/1.4/src/: SchemaParser.php  TypeMeta.php
dom/codeGen/1.4/tpl/: template-engine.php  tpl-class-def.php  tpl-constants-cpp-file.php  tpl-constants-cpp.php  tpl-constants-file.php  tpl-constants.php  tpl-cpp-methods.php  tpl-cpp-static.php  tpl-cpp.php  tpl-dot-h.php  tpl-doxygen.php  tpl-elements-file.php  tpl-elements.php  tpl-include-list.php  tpl-includes.php  tpl-types-cpp.php  tpl-types-header.php
dom/codeGen/1.5/: gen.php
dom/codeGen/1.5/om/: base-types.php  xsAll.php  xsAnnotation.php  xsAttribute.php  xsChoice.php  xsComplexContent.php  xsComplexType.php  xsDocumentation.php  xsElement.php  xsEnumeration.php  xsExtension.php  xsGroup.php  xsList.php  xsMaxExclusive.php  xsMaxInclusive.php  xsMaxLength.php  xsMinInclusive.php  xsRestriction.php  xsSchema.php  xsWhiteSpace.php
dom/codeGen/1.5/src/: ElementMeta.php  SchemaParser.php  TypeMeta.php
dom/codeGen/1.5/tpl/: template-engine.php  tpl-class-def.php  tpl-constants-cpp-file.php  tpl-constants-cpp.php  tpl-constants.php  tpl-cpp-body.php  tpl-cpp-methods.php  tpl-cpp-static.php  tpl-cpp.php  tpl-elements-file.php  tpl-header.php  tpl-include-list.php  tpl-includes.php  tpl-types-cpp-file.php  tpl-types-cpp.php  tpl-types-header-file.php  tpl-types-header.php
dom/external-libs/libxml2-new/lib/: libxml2-vc100-mt.lib  libxml2-vc80-mt.lib  libxml2-vc90-mt.lib
dom/external-libs/pcre-8.02/: CMakeLists.txt  dftables.c  pcre.h.generic  pcre.h.in  pcre_compile.c  pcre_config.c  pcre_dfa_exec.c  pcre_exec.c  pcre_fullinfo.c  pcre_get.c  pcre_globals.c  pcre_info.c  pcre_internal.h  pcre_maketables.c  pcre_newline.c  pcre_ord2utf8.c  pcre_refcount.c  pcre_scanner.cc  pcre_scanner.h  pcre_scanner_unittest.cc  pcre_stringpiece.cc  pcre_stringpiece.h.in  pcre_stringpiece_unittest.cc  pcre_study.c  pcre_tables.c  pcre_try_flipped.c  pcre_ucd.c  pcre_valid_utf8.c  pcre_version.c  pcre_xclass.c  pcrecpp.cc  pcrecpp.h  pcrecpp_unittest.cc  pcrecpparg.h.in  pcredemo.c  pcregrep.c  pcreposix.c  pcretest.c
dom/include/: dae.h
dom/include/1.4/dom/: domAccessor.h  domAnimation.h  domAnimation_clip.h  domAsset.h  domBind_material.h  domBool_array.h  domBox.h  domCOLLADA.h  domCamera.h  domCapsule.h  domCg_connect_param.h  domCg_newarray_type.h  domCg_newparam.h  domCg_param_type.h  domCg_sampler1D.h  domCg_sampler2D.h  domCg_sampler3D.h  domCg_samplerCUBE.h  domCg_samplerDEPTH.h  domCg_samplerRECT.h  domCg_setarray_type.h  domCg_setparam.h  domCg_setparam_simple.h  domCg_setuser_type.h  domCg_surface_type.h  domChannel.h  domCommon_color_or_texture_type.h  domCommon_float_or_param_type.h  domCommon_newparam_type.h  domCommon_transparent_type.h  domController.h  domConvex_mesh.h  domCylinder.h  domEffect.h  domEllipsoid.h  domExtra.h  domFloat_array.h  domForce_field.h  domFx_annotate_common.h  domFx_annotate_type_common.h  (+130 more)
dom/include/dae/: daeArray.h  daeArrayTypes.h  daeAtomicType.h  daeDatabase.h  daeDocument.h  daeDomTypes.h  daeError.h  daeErrorHandler.h  daeGCCPlatform.h  daeIDRef.h  daeIOPlugin.h  daeIOPluginCommon.h  daeMemorySystem.h  daeMetaAny.h  daeMetaAttribute.h  daeMetaCMPolicy.h  daeMetaChoice.h  daeMetaElement.h  daeMetaElementAttribute.h  daeMetaGroup.h  daeMetaSequence.h  daePlatform.h  daeRawResolver.h  daeRefCountedObj.h  daeSIDResolver.h  daeSmartRef.h  daeStandardURIResolver.h  daeStringRef.h  daeStringTable.h  daeTinyXMLPlugin.h  daeURI.h  daeUtils.h  daeWin32Platform.h  daeZAEUncompressHandler.h
dom/include/modules/: daeLIBXMLPlugin.h  daeSTLDatabase.h  stdErrPlugin.h
dom/src/1.4/dom/: domAccessor.cpp  domAnimation.cpp  domAnimation_clip.cpp  domAsset.cpp  domBind_material.cpp  domBool_array.cpp  domBox.cpp  domCamera.cpp  domCapsule.cpp  domCg_connect_param.cpp  domCg_newarray_type.cpp  domCg_newparam.cpp  domCg_param_type.cpp  domCg_sampler1D.cpp  domCg_sampler2D.cpp  domCg_sampler3D.cpp  domCg_samplerCUBE.cpp  domCg_samplerDEPTH.cpp  domCg_samplerRECT.cpp  domCg_setarray_type.cpp  domCg_setparam.cpp  domCg_setparam_simple.cpp  domCg_setuser_type.cpp  domCg_surface_type.cpp  domChannel.cpp  domCommon_color_or_texture_type.cpp  domCommon_float_or_param_type.cpp  domCommon_newparam_type.cpp  domCommon_transparent_type.cpp  domController.cpp  domConvex_mesh.cpp  domCylinder.cpp  domEllipsoid.cpp  domExtra.cpp  domFloat_array.cpp  domForce_field.cpp  domFx_annotate_common.cpp  domFx_annotate_type_common.cpp  domFx_basic_type_common.cpp  domFx_clearcolor_common.cpp  (+128 more)
dom/src/dae/: dae.cpp  daeArray.cpp  daeAtomicType.cpp  daeDatabase.cpp  daeDocument.cpp  daeDom.cpp  daeError.cpp  daeErrorHandler.cpp  daeIDRef.cpp  daeIOPluginCommon.cpp  daeMemorySystem.cpp  daeMetaCMPolicy.cpp  daeMetaChoice.cpp  daeMetaElementAttribute.cpp  daeMetaGroup.cpp  daeMetaSequence.cpp  daeRawResolver.cpp  daeRefCountedObj.cpp  daeStandardURIResolver.cpp  daeStringRef.cpp  daeStringTable.cpp  daeURI.cpp  daeUtils.cpp
dom/src/modules/LIBXMLPlugin/: daeLIBXMLPlugin.cpp
dom/src/modules/STLDatabase/: daeSTLDatabase.cpp
dom/src/modules/stdErrPlugin/: stdErrPlugin.cpp
dom/test/: CMakeLists.txt
dom/test/1.4/: CMakeLists.txt  domTest.cpp  domTest.h  export.cpp  integrationExample.cpp
dom/test/1.4/data/: Seymour.dae  (+12 more)
dom/test/1.5/: CMakeLists.txt  domTest.cpp  domTest.h  export.cpp
(+26 files in other folders)
